<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ba"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FF9800"
    android:orientation="vertical"
    tools:context="sk.tuke.smart.glutenfree.MenuActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="30dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/menu_button_add_shop"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/menu_button_restaurants"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="50dp"
            android:layout_weight="1"
            android:background="@drawable/button"
            android:drawableLeft="@drawable/silverware"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:text="@string/menu_button_restaurants"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <Button
            android:id="@+id/menu_button_shops"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="130dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:background="@drawable/button"
            android:drawableLeft="@drawable/store"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:text="@string/menu_button_shops"
            android:textColor="@android:color/white"
            android:textSize="20sp" />
    </LinearLayout>

</LinearLayout>
