<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="sk.tuke.smart.glutenfree.FormActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:layout_editor_absoluteX="8dp"
    tools:layout_editor_absoluteY="8dp">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginTop="20dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_weight="1"
        android:orientation="vertical">



        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/form_name"
            />

        <requestFocus/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editText2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textMultiLine" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/form_adress" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPostalAddress" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/form_desc" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editText3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textMultiLine"/>


        </LinearLayout>

        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/form_photo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editText4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number" />

            <!--<android.support.design.widget.FloatingActionButton
                android:id="@+id/form_camera_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:clickable="true"
                app:backgroundTint="#FF5722"
                app:fabSize="normal"
                app:srcCompat="@drawable/camera" />-->

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/form_upload_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="5dp"
                android:clickable="true"
                app:backgroundTint="#FF5722"
                app:fabSize="normal"
                app:srcCompat="@drawable/folder_image" />


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:orientation="horizontal">


                <ImageButton
                    android:id="@+id/form_imageButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="@android:drawable/screen_background_light_transparent"
                    android:visibility="visible"
                    app:srcCompat="@drawable/star_outline" />

                <ImageButton
                    android:id="@+id/form_imageButton1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="@android:drawable/screen_background_light_transparent"
                    android:visibility="visible"
                    app:srcCompat="@drawable/star_outline" />

                <ImageButton
                    android:id="@+id/form_imageButton2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="@android:drawable/screen_background_light_transparent"
                    android:visibility="visible"
                    app:srcCompat="@drawable/star_outline" />

                <ImageButton
                    android:id="@+id/form_imageButton3"
                    android:layout_width="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_height="wrap_content"
                    android:background="@android:drawable/screen_background_light_transparent"
                    android:visibility="visible"
                    app:srcCompat="@drawable/star_outline" />

                <ImageButton
                    android:id="@+id/form_imageButton4"
                    android:layout_width="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_height="wrap_content"
                    android:background="@android:drawable/screen_background_light_transparent"
                    android:visibility="visible"
                    app:srcCompat="@drawable/star_outline" />


            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/form_coordinates_button"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="2dp"
                    android:layout_weight="1"
                    android:background="@drawable/button"
                    android:drawableLeft="@drawable/google_maps"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/form_button_location" />

                <Button
                    android:id="@+id/form_button_send"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="2dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/button"
                    android:drawableLeft="@drawable/check"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:text="@string/form_button_send" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>



</LinearLayout>
</ScrollView>

